--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ h2 {
   line-height: 1.2; }
 
 h3 {
-  font-family: 'ProximaNova-Bold',sans-serif;
+  font-family: 'ProximaNova-Bold',sans-serif; 
   font-size: 1.5em;
   line-height: 1.25; }
 
@@ -493,6 +493,9 @@ section h2 {
   .btn:hover {
     text-decoration: none;
     background-color: #d85506; }
+.zayavka__btn {
+    line-height: 20px;
+}
 
 .cross-btn {
   position: relative;
@@ -1016,11 +1019,16 @@ section.contacts {
           color: #f6630a;
           text-decoration: none; }
 
-.ymaps-layers-pane {
+[class*="ymaps-2"][class*="-ground-pane"] {
   filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
   /* Firefox 3.5+ */
   -webkit-filter: grayscale(100%);
   /* Chrome 19+ & Safari 6+ */ }
+.ymaps-2-1-77-gotoymaps__container, 
+.ymaps-2-1-77-gototech, 
+.ymaps-2-1-77-copyright__content {
+  display: none !important;
+}
 
 .subfooter {
   height: 70px; }
