--- a/src/style.css
+++ b/src/style.css
@@ -1050,8 +1050,7 @@ section.contacts {
 }
 
 .content-box span {
-  font-size: 43px;
-  letter-spacing: 3px;
+  font-size: 0.8em;
 }
 
 .service-sl-section {
